# pybind11_learn

./: CMakeLists.txt  GA.py  README.md  Student.cpp  main.cpp  main.py  requirements.txt
EvolutionStrategy/: CMakeLists.txt  GA.cc  organism.cc  organism.h
Student/: CMakeLists.txt  PyStudent.cpp  Student.cpp  Student.h
inc/: json.hpp
